# jumpcloud-takehome

./: CHANGELOG.md  Dockerfile  README  jumpcloud-takehome.cabal
src/: ExerciseTracker.hs
test/: Main.hs  TestMultiThread.hs  TestSingleThread.hs
